# projects

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  Tools.drawio  add_berpublicsearch_to_stock.py  anonymise_2011_small_area_stock.py  binder.ipynb  environment.meta.yml  environment.yml  get_stock_annual_totals.py  pyproject.toml  setup.py  tasks.py
2021-07-ireland-small-area-statistics/: .prefect  config.ini  counties.json  environment.yml  pipeline.py  tasks.py  test_tasks.py
aggregate-nta-emissions-to-all-of-dublin/: README.md  calculate_rail_emissions_and_energy.py  calculate_road_energy_emissions_and_energy.py  environment.yml  pipeline.yaml  tasks.py
aggregate-urban-atlas-footprints-to-small-areas/: README.md  environment.yml  group_footprints_by_small_areas.py  pipeline.yaml  tasks.py
all-of-dublin-emissions/: README.md  functions.py  pipeline.py  tasks.py
all-of-dublin-stats/: README.md  environment.yml  functions.py  pipeline.py  tasks.py
boiler-maps/: download.py  environment.yml  environmental_variables.py  extract_dublin_boiler_census_statistics.py  extract_dublin_boiler_synthetic_stock_data.py  hooks.py  pipeline.yaml  plot_dublin_boiler_census_barchart.py  plot_dublin_boiler_census_map.py  plot_dublin_boiler_census_statistics.py  plot_dublin_boiler_synthetic_stock_barchart.py  plot_dublin_boiler_synthetic_stock_energy_piechart.py  plot_dublin_boiler_synthetic_stock_trendline.py
building-emissions/: README.md  environment.dev.yml  environment.yml  functions.py  map_emissions.py  pipeline.py  serializers.py  tasks.py
(+423 files in other folders)
