[tool.poetry]
name = "dublin-building-stock"
version = "0.1.0"
description = "Creates a live, open Dublin building stock at Postcode level by merging <2011 Census data with the BER Public Search"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
geopandas = "^0.8.2"
pandas = "^1.2.2"
valuation-office-ireland = "^0.1.0"
berpublicsearch = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
